manifests/dev/tempo/StatefulSet-tempo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tempo
    app.kubernetes.io/version: 2.8.2
    helm.sh/chart: tempo-1.23.3
  name: tempo
  namespace: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: tempo
  serviceName: tempo-headless
  template:
    metadata:
      annotations:
        checksum/config: fc39709a9f32505221f882e123b87968fee46121ebf62d883bf2f8a1118ac0a4
      labels:
        app.kubernetes.io/instance: tempo
        app.kubernetes.io/name: tempo
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - -config.file=/conf/tempo.yaml
            - -mem-ballast-size-mbs=1024
          image: grafana/tempo:2.8.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 3200
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: tempo
          ports:
            - containerPort: 3200
              name: prom-metrics
            - containerPort: 6831
              name: jaeger-thrift-c
              protocol: UDP
            - containerPort: 6832
              name: jaeger-thrift-b
              protocol: UDP
            - containerPort: 14268
              name: jaeger-thrift-h
            - containerPort: 14250
              name: jaeger-grpc
            - containerPort: 9411
              name: zipkin
            - containerPort: 55680
              name: otlp-legacy
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 55681
              name: otlp-httplegacy
            - containerPort: 4318
              name: otlp-http
            - containerPort: 55678
              name: opencensus
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 3200
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          volumeMounts:
            - mountPath: /conf
              name: tempo-conf
            - mountPath: /var/tempo
              name: storage
        - args:
            - -config
            - /conf/tempo-query.yaml
          image: grafana/tempo-query:latest
          imagePullPolicy: IfNotPresent
          name: tempo-query
          ports:
            - containerPort: 16686
              name: jaeger-ui
            - containerPort: 16687
              name: jaeger-metrics
          resources: {}
          volumeMounts:
            - mountPath: /conf
              name: tempo-query-conf
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccountName: tempo
      volumes:
        - configMap:
            name: tempo-query
          name: tempo-query-conf
        - configMap:
            name: tempo
          name: tempo-conf
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
