manifests/dev/tempo/Ingress-tempo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tempo
    app.kubernetes.io/version: 2.9.0
    helm.sh/chart: tempo-1.24.1
  name: tempo
  namespace: tempo
spec:
  ingressClassName: tailscale
  rules:
    - host: tempo.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: tempo
                port:
                  number: 16686
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tempo.bearded-snake.ts.net
      secretName: tempo-tls
